--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
-      <img src="https://user-images.githubusercontent.com/5594088/110497088-6f25f200-80f6-11eb-95a9-85e6046129f2.png"
-         width="500" height="244">
-      <a href="https://play.google.com/store/apps/details?id=com.csven.acnhplanner">
+      <p style="text-align:center;"><img src="https://user-images.githubusercontent.com/5594088/110497088-6f25f200-80f6-11eb-95a9-85e6046129f2.png"
+                                         width="500" height="244"></p>
+      <p style="text-align:center;"><a href="https://play.google.com/store/apps/details?id=com.csven.acnhplanner">
          <img src="https://user-images.githubusercontent.com/5594088/110479602-e1420b00-80e5-11eb-9300-0cd79e76dc1f.png"
          width="250" height="100">
-      </a>
+        </a></p>
       <a href="https://apps.apple.com/us/app/planner-for-ac-nh/id1499309768?itsct=apps_box&amp;itscg=30200">
-         <img src="https://user-images.githubusercontent.com/5594088/110498974-18211c80-80f8-11eb-8a8e-f01c32d72f5b.png"
+        <p style="text-align:center;"><img src="https://user-images.githubusercontent.com/5594088/110498974-18211c80-80f8-11eb-8a8e-f01c32d72f5b.png"
           width="239" height="80">
-      </a>
+  </a></p>
    </body>
 </html>
