--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
 <!DOCTYPE html>
-<html><body bgcolor="#F8F5E4">
+<html>
+<head>
+<title>Planner for AC: NH</title>
+<style>
+body {
+  background-color: #F8F5E4;
+  text-align: center;
+  color: #646262;
+}
+</style>
+</head>
+<body>
   <center>
       <p><img src="https://user-images.githubusercontent.com/5594088/110497088-6f25f200-80f6-11eb-95a9-85e6046129f2.png"
                                          width="500" height="244"></p>
