--- a/catalogscanner.html
+++ b/catalogscanner.html
@@ -3,7 +3,7 @@
 <head>
 <title>CatalogScanner import</title>
 <style>
-@font-face { font-family: Humming; src: url('https://linsvensson.github.io/acnhplanner.app/assets/nintendoP_Humming-E_002pr.otf'); } 
+@font-face { font-family: Humming; src: url('assets/nintendoP_Humming-E_002pr.otf'); } 
       h1 {
          font-family: Humming
       }
